# moss-landing-fire

./: .gitignore  README.md  purple_air_api.txt.example  pyproject.toml
data/purple_air/: mbuapcd_cleaning_row_report.csv  mbuapcd_cleaning_sensor_report.csv  mbuapcd_pm25.csv  mbuapcd_pm25_cleaned.csv  mbuapcd_pm25_enhancement_4h.csv  mbuapcd_pm25_enhancement_4h_no72253.csv  mbuapcd_sensor_baselines.csv  monterey_bay_unified_apcd.geojson  moss_landing_pm25.csv  receptor_events.csv  sensors.csv  sensors_active.csv  sensors_mbuapcd.csv  sensors_mbuapcd_active.csv  sensors_mbuapcd_active_cleaned.csv  sensors_mbuapcd_bbox.csv  sensors_nearby.csv
docs/: codex_handoff.md  hysplit_setup_handoff.md  local_data.md  moss_hysplit_current_handoff.md  moss_landing_plume_handoff.md  project_status.md
hysplit/: README.md
moss_landing/: __init__.py  constants.py  fsutil.py  hysplit.py  kriging.py  paths.py  purpleair.py
nersc/: bootstrap_env.sh  compare_replicates.slurm  env.sh  merge_forward.slurm  run_forward_chunks.slurm  run_forward_packed.slurm  score_forward.slurm  smoke.slurm  submit_combined_validation.sh  submit_cumulative_validation.sh  submit_extended_validation.sh  submit_packing_benchmarks.sh  submit_particle_convergence.sh  summarize_packing_benchmark.slurm  summarize_particle_convergence.slurm  validate_combined.slurm
report/: moss_landing_progress_report.tex
scripts/hysplit/: build_comparison_mode_sheet.py  build_contact_sheet.py  build_forward_manifest.py  build_kriging_comparison_sheet.py  (+17 more)
tests/: test_combined_hysplit_sweep.py  test_shared_package.py
(+13 files in other folders)
