[project]
name = "moss-landing-fire"
version = "0.1.0"
description = "PM2.5 plume visualization for the Moss Landing battery fire"
readme = "docs/moss_landing_plume_handoff.md"
requires-python = ">=3.12,<3.13"
dependencies = [
  "contextily>=1.6",
  "matplotlib>=3.9",
  "numpy>=2.0",
  "pandas>=2.2",
  "plotly>=6.0",
  "pykrige>=1.7",
  "pytz>=2026.0",
  "requests>=2.32",
  "scipy>=1.14",
  "shapely>=2.0",
  "xyzservices>=2025.4",
]

[project.optional-dependencies]
map = []
science = []

[tool.uv]
default-groups = []
